feat: rename project to bleachpdf and add config hierarchy
- Rename project from "Redactor" to "bleachpdf" in documentation.
- Implement configuration file discovery logic with precedence order: CLI arg, environment variable, local directory, user config, and system config.
- Update installation instructions and usage examples to reflect the new CLI entry point.
- Refactor OCR and text normalization logic.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,11 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
-name = "redactor"
+name = "bleachpdf"
 version = "0.1.0"
-description = "PII redaction tool for PDF documents"
+description = "PII redaction tool for PDF documents using OCR and PEG pattern matching"
 requires-python = ">=3.9"
 dependencies = [
     "pytesseract>=0.3.10",
@@ -10,7 +14,11 @@ dependencies = [
     "PyMuPDF>=1.24.0",
     "PyYAML>=6.0",
     "parsimonious>=0.10.0",
+    "platformdirs>=4.0.0",
 ]
+
+[project.scripts]
+bleachpdf = "bleachpdf:main"
 
 [project.optional-dependencies]
 dev = [
