feat: add post-redaction verification and improve CLI UX
- Implement post-redaction verification to re-scan output files for missed patterns
- Add `--no-verify` flag to skip the verification step for performance
- Refactor logging setup to avoid capturing root logger noise from libraries
- Add progress logging (page N/M) during redaction
- Update CLI parser to print full help message on argument errors
- Update README with verification details and improved regex examples using `(?i)`

--- a/pii.example.yaml
+++ b/pii.example.yaml
@@ -19,8 +19,12 @@ patterns:
     match = "ACCT" d d d d d d
     d = ~"[0-9]"
 
-  # Case-insensitive match using regex
-  - 'match = ~"[Jj][Oo][Hh][Nn][Dd][Oo][Ee]"'
+  # Case-insensitive match using (?i) flag
+  - 'match = ~"(?i)johndoe"'
+
+  # Address with optional suffix (case-insensitive)
+  - |
+    match = ~"(?i)123mainst(reet)?"
 
   # Partial match - last 4 digits of known number
   - 'match = "1234"'
