docs(tests): add integration test suite plan using olmOCR-bench
Add `plan.md` to document the strategy for building an integration test suite based on the `olmOCR-bench` dataset.

The plan outlines:
- The core testing logic: attempting to redact known text assertions and relying on bleachpdf's verification mode.
- Dataset management using the `huggingface_hub` Python API to avoid checking large binaries into the repo.
- Proposed directory structure and `conftest.py` responsibilities.
- CLI filtering options for `pytest` to handle the large dataset size.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,10 +45,15 @@ Issues = "https://github.com/johnwbyrd/bleachpdf/issues"
 [project.optional-dependencies]
 dev = [
     "ruff>=0.8.0",
+    "pytest>=7.0.0",
+    "huggingface_hub>=0.20.0",
 ]
 
 [project.scripts]
 bleachpdf = "bleachpdf:main"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/bleachpdf"]
 
 [tool.ruff]
 line-length = 100
