test: add infrastructure for olmOCR-bench integration tests
This commit introduces the setup for integration testing using the
allenai/olmOCR-bench dataset.

Changes include:
- Create `tests/conftest.py` to manage test configuration and fixtures.
- Implement automatic dataset downloading via `huggingface_hub` on the
  first test run.
- Add logic to parse benchmark JSONL files and extract text fields for
  parameterized redaction testing.
- Add a pre-check to ensure Tesseract is installed.
- Update `.gitignore` to exclude the downloaded dataset directory and
  test output artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,9 @@ pii.yaml
 
 # Sensitive data
 data/
+
+# Test dataset (downloaded on first test run)
+tests/olmocr-bench/
+
+# Test output (redacted PDFs for inspection)
+tests/output/
