test: enable parallel test execution using pytest-xdist
- Add `pytest-xdist` to dev dependencies and configure `pyproject.toml` to use `-n auto` by default.
- Refactor `conftest.py` to support multi-process execution:
  - Implement `pytest_runtest_logreport` to aggregate test metrics (redaction counts, pass/fail) from worker nodes to the controller, ensuring accurate reporting across processes.
  - Update `pytest_configure` and `pytest_sessionfinish` to execute setup checks and summary reporting only on the controller node.
  - Add `pytest_xdist_auto_num_workers` to default worker count to half the available CPU cores.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ Issues = "https://github.com/johnwbyrd/bleachpdf/issues"
 dev = [
     "ruff>=0.8.0",
     "pytest>=7.0.0",
+    "pytest-xdist>=3.0.0",
     "huggingface_hub>=0.20.0",
 ]
 
@@ -54,6 +55,9 @@ bleachpdf = "bleachpdf:main"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/bleachpdf"]
+
+[tool.pytest.ini_options]
+addopts = "-n auto"
 
 [tool.ruff]
 line-length = 100
