--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "PyYAML>=6.0",
     "parsimonious>=0.10.0",
     "platformdirs>=4.0.0",
+    "psutil>=5.0.0",
 ]
 
 [project.urls]
